Criando a janela de edição

--- a/ByteBank.Agencias/MainWindow.xaml
+++ b/ByteBank.Agencias/MainWindow.xaml
@@ -21,8 +21,11 @@
             <TextBlock FontWeight="Bold">Endereço</TextBlock>
             <TextBlock Name="txtEndereco"></TextBlock>
         </StackPanel>
-        <Button Content="Excluir" Canvas.Left="432" Canvas.Top="289" Width="75"
+        <Button Content="Apagar" Canvas.Left="432" Canvas.Top="289" Width="75"
                 Click="Button_Click" Name="btnExcluir"/>
+        
+        <Button Content="Editar" Canvas.Left="352" Canvas.Top="289" Width="75"
+                Name="btnEditar"/>
 
     </Canvas>
 </Window>
